# mapping-bot

./: README.md
mapping/: CMakeLists.txt  package.xml
mapping/launch/: localization.launch  mapping.launch  teleop.launch
mapping_bot/: CMakeLists.txt  package.xml
mapping_bot/config/: base_local_planner_params.yaml
mapping_bot/launch/: config.rviz  localization.launch  mapping.launch  robot_description.launch  world.launch
mapping_bot/urdf/: my_robot.gazebo  my_robot.xacro
mapping_bot/worlds/: my_world.world
my_robot/: package.xml
my_robot/launch/: world.launch
my_robot/urdf/: my_robot.gazebo  my_robot.xacro
