<?xml version="1.0"?>
<package format="2">
  <name>mapping</name>
  <version>1.0.0</version>
  <description>
    Package containing launch files for RTAB-Map mapping, teloperation, and localization.
  </description>

  <author email="gsotirch@gmail.com">George Sotirchos</author>
  <maintainer email="gsotirch@gmail.com">George Sotirchos</maintainer>
  <license>MIT</license>
  <url type="website">https://github.com/7555G/mapping-bot</url>

  <buildtool_depend>catkin</buildtool_depend>
</package>
